deiscovered a bug

--- a/src/views/Question/SubQuestions/SubQuestion.css
+++ b/src/views/Question/SubQuestions/SubQuestion.css
@@ -12,6 +12,6 @@
 }
 
 
-.subQuestionFav{
-   
+.subQuestionWrapper{
+    width: 100%;
 }
